# simstring

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.in  dastring.sln  export.cpp  export_wrap.cpp  install_python.sh  install_python3.sh  sample_unicode.py  setup.py  simstring.py  simstring.sln
doc/: doxyfile  header.html
frontend/: Makefile.am  frontend.vcproj  main.cpp  optparse.h
include/: Makefile.am
include/dastring/: cdbm.h  cdbpp.h  dastring.h  memory_mapped_file.h  memory_mapped_file_posix.h  memory_mapped_file_win32.h  ngram.h  query.h
include/simstring/: cdbpp.h  measure.h  memory_mapped_file.h  memory_mapped_file_posix.h  memory_mapped_file_win32.h  ngram.h  query.h  simstring.h
sample/: Makefile.am  sample.cpp  sample_unicode.cpp
simstring/: cdbpp.h  memory_mapped_file.h  memory_mapped_file_posix.h  ngram.h
swig/: INSTALL  Makefile.am  export.cpp  export.h  export.i  setup.py  setup.py.in
swig/doc/: doxyfile  header.html
swig/java/: Makefile  Sample.java  prepare.sh  run_sample.sh
swig/perl/: Makefile.PL  Makefile.PL.in  prepare.sh  run_sample.sh  sample.pl
swig/perl/t/: 00_compile.t  01_usage.t  02_usage.t
swig/php/: Makefile  build_ext.sh  prepare.sh
swig/python/: .gitignore  export_wrap.cpp  prepare.sh  sample.py  sample_unicode.py  setup.py  setup.py.in  simstring.py
swig/ruby/: .gitignore  extconf.rb.in  prepare.sh  sample.rb  sample_unicode.rb
