# $Id$

simstringincludedir = $(includedir)/simstring

simstringinclude_HEADERS = \
	simstring/cdbpp.h \
	simstring/memory_mapped_file.h \
	simstring/memory_mapped_file_posix.h \
	simstring/ngram.h \
	simstring/measure.h \
	simstring/simstring.h

EXTRA_DIST = \
	simstring/memory_mapped_file_win32.h
