# $Id:$

EXTRA_DIST = \
	export.i \
	export.h \
	export.cpp \
	python/prepare.sh \
	python/setup.py.in \
	python/export_wrap.cpp \
	python/simstring.py \
	python/sample.py \
	python/sample_unicode.py \
	ruby/prepare.sh \
	ruby/extconf.rb.in \
	ruby/export_wrap.cpp \
	ruby/sample.rb \
	ruby/sample_unicode.rb \
	perl/prepare.sh \
	perl/Makefile.PL \
	perl/export_wrap.cpp \
	perl/simstring.pm \
	perl/sample.pl \
	perl/t/00_compile.t \
	perl/t/01_usage.t \
	perl/t/02_usage.t

