# $Id:$

EXTRA_DIST = \
	python/prepare.sh \
	python/setup.py \
	python/export_wrap.cpp \
	python/simstring.py \
	python/sample.py \
	python/sample_unicode.py \
	ruby/prepare.sh \
	ruby/extconf.rb.in \
	ruby/export_wrap.cpp \
	ruby/sample.rb \
	ruby/sample_unicode.rb \
	perl/prepare.sh \
	perl/Makefile.PL.in \
	perl/export_wrap.cpp \
	perl/simstring.pm \
	perl/run_sample.sh \
	perl/sample.pl \
	perl/t/00_compile.t \
	perl/t/01_usage.t \
	perl/t/02_usage.t \
	java/prepare.sh \
	java/Makefile \
	java/export_wrap.cpp \
	java/simstring/*.java \
	java/run_sample.sh \
	java/Sample.java \
	export.i \
	export.h \
	export.cpp
